crates/neo-tui/tests/snapshots/render__settings_fresh_install.snap
---
source: crates/neo-tui/tests/render.rs
expression: "common::render(&state, 120, 40)"
---
Stark  ○ NO MIC YET  v dictates  NO VOICE OUT   Esc chat · , settings · : commands · ? keys
┌ Settings ────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│── Connections & keys                                                                                                 │
│  active inference          none — add a key or sign in                                                               │
│                            Enter selects · s sets a key · x removes · K checks · c signs in                          │
│▸ (a) OpenAI API key        missing · selected                                                                        │
│  (b) Claude Pro/Max        signed out                                                                                │
│  (c) Anthropic API key     missing                                                                                   │
│  (d) ChatGPT Plus/Pro      signed out                                                                                │
│                            c signs in · d signs out · fallbacks below need the vendor's own CLI                      │
│  (e) Claude via CLI        signed out                                                                                │
│  (f) ChatGPT via Codex     signed out                                                                                │
│  typesafe key              missing                                                                                   │
│                            typed-only: speech needs an OpenAI API key (K6)                                           │
│── Models                                                                                                             │
│  inference                 openai/sol-latest                                                                         │
│  text_helper               openai/gpt-5.6-luna                                                                       │
│  stt                       openai/gpt-transcribe                                                                     │
│  tts                       openai/gpt-4o-mini-tts                                                                    │
│  sol_effort                low                                                                                       │
│  live transcription        off                                                                                       │
│  stt_live.model            openai/gpt-live-transcribe                                                                │
│                            ids are typed, not picked — `:models refresh` re-reads the catalogue                      │
│── Identity                                                                                                           │
│  name                      Stark                                                                                     │
│── Listening                                                                                                          │
│  enabled                   on                                                                                        │
│  addressing                open                                                                                      │
│  push to talk              off                                                                                       │
│  mic device                system default                                                                            │
│── Voice                                                                                                              │
│  speak replies             off                                                                                       │
│  voice                     marin                                                                                     │
│  speak                     questions_only                                                                            │
│  duplex                    auto                                                                                      │
│  keep recordings           off                                                                                       │
│── Intake                                                                                                             │
│  enqueue at                0.70                                                                                      │
└ Enter edit/toggle · s set key · x remove · K check · c connect · d disconnect · Esc back ────────────────────────────┘
NORMAL │ setup: s adds a key · c signs in to a subscription · Enter selects the runtime │ /fixtures/neo/neo.db v3
--- styles ---
fg=Cyan bg=Reset mod=BOLD  , settings
fg=Cyan bg=Reset mod=BOLD  ── Connections & keys
fg=Cyan bg=Reset mod=BOLD  ── Identity
fg=Cyan bg=Reset mod=BOLD  ── Intake
fg=Cyan bg=Reset mod=BOLD  ── Listening
fg=Cyan bg=Reset mod=BOLD  ── Models
fg=Cyan bg=Reset mod=BOLD  ── Voice
fg=Cyan bg=Reset mod=NONE  │
fg=Cyan bg=Reset mod=NONE  │▸
fg=Cyan bg=Reset mod=NONE  ┌ Settings ────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
fg=Cyan bg=Reset mod=NONE  └ Enter edit/toggle · s set key · x remove · K check · c connect · d disconnect · Esc back ────────────────────────────┘
fg=DarkGray bg=Reset mod=NONE  (b) Claude Pro/Max
fg=DarkGray bg=Reset mod=NONE  (c) Anthropic API key
fg=DarkGray bg=Reset mod=NONE  (d) ChatGPT Plus/Pro
fg=DarkGray bg=Reset mod=NONE  (e) Claude via CLI
fg=DarkGray bg=Reset mod=NONE  (f) ChatGPT via Codex
fg=DarkGray bg=Reset mod=NONE  Esc chat ·
fg=DarkGray bg=Reset mod=NONE  active inference
fg=DarkGray bg=Reset mod=NONE  addressing
fg=DarkGray bg=Reset mod=NONE  duplex
fg=DarkGray bg=Reset mod=NONE  enabled
fg=DarkGray bg=Reset mod=NONE  enqueue at
fg=DarkGray bg=Reset mod=NONE  inference
fg=DarkGray bg=Reset mod=NONE  keep recordings
fg=DarkGray bg=Reset mod=NONE  live transcription
fg=DarkGray bg=Reset mod=NONE  mic device
fg=DarkGray bg=Reset mod=NONE  name
fg=DarkGray bg=Reset mod=NONE  push to talk
fg=DarkGray bg=Reset mod=NONE  sol_effort
fg=DarkGray bg=Reset mod=NONE  speak
fg=DarkGray bg=Reset mod=NONE  speak replies
fg=DarkGray bg=Reset mod=NONE  stt
fg=DarkGray bg=Reset mod=NONE  stt_live.model
fg=DarkGray bg=Reset mod=NONE  text_helper
fg=DarkGray bg=Reset mod=NONE  tts
fg=DarkGray bg=Reset mod=NONE  typesafe key
fg=DarkGray bg=Reset mod=NONE  voice
fg=DarkGray bg=Reset mod=NONE  · : commands · ? keys
fg=DarkGray bg=Reset mod=NONE  ○ NO MIC YET  v dictates
fg=Reset bg=Reset mod=BOLD  (a) OpenAI API key
fg=Reset bg=Reset mod=BOLD  Stark
fg=Yellow bg=Reset mod=BOLD  NO VOICE OUT
fg=Yellow bg=Reset mod=NONE  NORMAL │ setup: s adds a key · c signs in to a subscription · Enter selects the runtime │ /fixtures/neo/neo.db v3
fg=Yellow bg=Reset mod=NONE  missing
fg=Yellow bg=Reset mod=NONE  missing · selected
fg=Yellow bg=Reset mod=NONE  signed out
