crates/neo-tui/tests/snapshots/render__too_small_59x19.snap
---
source: crates/neo-tui/tests/render.rs
expression: "common::render(&state, 59, 19)"
---









            terminal too small — 60×20 minimum









--- styles ---
fg=Yellow bg=Reset mod=NONE  terminal too small — 60×20 minimum
